# fuckshadows-libev

./: .gitignore  .travis.yml  Makefile.am  configure.ac
libcares/: Makefile.am  configure.ac
src/: Makefile.am  MurmurHash3.c  MurmurHash3.h  acl.c  aead.c  aead.h  bitmap.c  bloom.c  bloom.h  cache.h  common.h  crypto.c  crypto.h  encrypt.c  encrypt.h  http.h  jconf.c  jconf.h  json.c  json.h  local.c  local.h  manager.c  manager.h  murmurhash2.h  netutils.c  redir.c  redir.h  resolv.c  resolv.h  rule.c  sbf.c  sbf.h  server.c  server.h  shadowsocks.h  socks5.h  spooky.c  spooky.h  stream.c  (+6 more)
